      programs.

  o Minor features (directory servers):
    - When somebody requests a list of statuses or servers, and we have
      none of those, return a 404 rather than an empty 200.

  o Minor features (directory voting):
    - Store v3 consensus status consensuses on disk, and reload them
      on startup.

  o Minor features (security):
    - Warn about unsafe ControlPort configurations.

  o Minor features (controller):
    - Add a PROTOCOLINFO controller command. Like AUTHENTICATE, it
      is valid before any authentication has been received. It tells
      a controller what kind of authentication is expected, and what
      protocol is spoken. Implements proposal 119.
    - New config option CookieAuthFile to choose a new location for the
      cookie authentication file, and config option
      CookieAuthFileGroupReadable to make it group-readable.

  o Minor features (unit testing):
    - Add command-line arguments to unit-test executable so that we can
      invoke any chosen test from the command line rather than having
      to run the whole test suite at once; and so that we can turn on
      logging for the unit tests.

  o Minor bugfixes (on 0.1.2.x):
    - If we require CookieAuthentication but we fail to write the
      cookie file, we would warn but not exit, and end up in a state
      where no controller could authenticate. Now we exit.
    - If we require CookieAuthentication, stop generating a new cookie
      every time we change any piece of our config.
    - When loading bandwidth history, do not believe any information in
      the future.  Fixes bug 434.
    - When loading entry guard information, do not believe any information
      in the future.
    - When we have our clock set far in the future and generate an
      onion key, then re-set our clock to be correct, we should not stop
      the onion key from getting rotated.
    - Clean up torrc sample config file.

  o Minor bugfixes (on 0.2.0.x):